--- a/src/sass/bootstrap/_variables.scss
+++ b/src/sass/bootstrap/_variables.scss
@@ -222,7 +222,7 @@ $grid-gutter-width:           30px !default;
 $line-height-lg:              1.25 !default;   //changed MR
 $line-height-sm:              1.5 !default;
 
-$border-width:                1px !default;
+$border-width:                2px !default;   //changed MR
 $border-color:                $gray-300 !default;
 
 $border-radius:               .25rem !default;
