--- a/src/sass/components/home/_friends.sass
+++ b/src/sass/components/home/_friends.sass
@@ -9,10 +9,9 @@
         +r(1439)
             // flex-direction: column
     &__text
-        max-width: rem(650px)
+        max-width: 45%
         padding-left: rem(45px)
         font-size: rem(20px)
-        flex: none
         margin-right: rem(110px)
         +r(1439)
             // padding-left: 0
@@ -20,7 +19,6 @@
             // text-align: center
             // margin-bottom: rem(30px)
             font-size: rem(16px)
-            max-width: rem(40px)
             margin-right: rem(40px)
     &__title
         font-family: $font-family-montserrat
@@ -36,6 +34,7 @@
         display: flex
         flex-wrap: wrap
         padding-right: rem(155px)
+        width: 55%
         +r(1439)
             padding-right: rem(45px)
     &__item
@@ -46,3 +45,12 @@
         img
             display: block
             max-width: 100%
+
+.logos-wrap
+    height: 100%
+    display: flex
+    align-items: center
+    justify-content: center
+.logos-inner
+    display: inline-block
+    vertical-align: middle
