--- a/src/templates/partials/home/_benefits.html
+++ b/src/templates/partials/home/_benefits.html
@@ -1,4 +1,4 @@
-<div class="benefits slide" style="background-image: url(./img/main.png)">
+<div class="benefits slide" style="background-image: url(./img/svgo/benefits_bg.svg)">
         <div class="slide__inner inner benefits__inner">
             <div class="benefits__content">
                 <div class="benefits__text slide__text">
@@ -27,7 +27,7 @@
                     </div>
                     <div class="benefits-slider__wrap">
                         <div class="benefits-slider__item">
-                            <img src="./img/Group447@2x.png" alt="img">
+                            <img src="./img/benefits.jpg" alt="img">
                         </div>
                     </div>
                     
