--- a/src/templates/partials/home/_join.html
+++ b/src/templates/partials/home/_join.html
@@ -1,8 +1,8 @@
-<div class="join slide" style="background-image: url(./img/Group208.png)">
+<div class="join slide" style="background-image: url(./img/svgo/join_bg.svg)">
     <div class="slide__inner inner join__inner">
         <div class="join__content">
             <div class="join__img slide__img">
-                <img src="./img/Group445@2x.png" alt="img">
+                <img src="./img/join.jpg" alt="img">
             </div>
             <div class="join__text slide__text">
                 <h2 class="join__title slide__title">
