--- a/src/templates/partials/home/_marketplace.html
+++ b/src/templates/partials/home/_marketplace.html
@@ -15,7 +15,7 @@
                 </div>
             </div>
             <div class="marketplace__img slide__img">
-                <img src="./img/140919.png" alt="img">
+                <img src="./img/marketplace.jpg" alt="img">
             </div>
         </div>
     </div>
