--- a/src/templates/partials/home/_why-join.html
+++ b/src/templates/partials/home/_why-join.html
@@ -1,4 +1,4 @@
-<div class="why-join slide" style="background-image: url(./img/Group202@2x.png)">
+<div class="why-join slide" style="background-image: url(./img/svgo/why-join_bg.svg)">
     <div class="slide__inner inner why-join__inner">
         <div class="why-join__content">
             <h2 class="why-join__title slide__title">
