--- a/src/sass/components/_footer.sass
+++ b/src/sass/components/_footer.sass
@@ -1,6 +1,8 @@
 .footer
     padding: rem(30px 0)
     font-size: rem(16px)
+    +r(1439)
+        font-size: rem(14px)
     p
         margin-bottom: 0
     
