--- a/src/sass/components/home/_contacts.sass
+++ b/src/sass/components/home/_contacts.sass
@@ -1,6 +1,14 @@
 .contacts
-    position: relative
-    padding: rem(0 0 205px)
+    &__wrap
+        position: relative
+        padding: rem(0 0 205px)
+        display: inline-block
+        vertical-align: middle
+        text-align: center
+        font-size: 1rem
+        width: 100%
+        height: 100%
+        +vertical
     &__content
         display: flex
         align-items: center
@@ -31,9 +39,12 @@
         margin-bottom: rem(50px)
         +r(1439)
             font-size: rem(34px)
+            margin-bottom: rem(20px)
 
     &__form-group
         margin-bottom: rem(30px)
+        +r(1439)
+            margin-bottom: rem(15px)
         &:last-child
             margin-bottom: 0
     &__input
@@ -54,49 +65,49 @@
                 font-size: 0
     &__submit
         margin-top: rem(40px)
+        +r(1439)
+            margin-top: rem(20px)
     &__footer
-        position: absolute
-        bottom: rem(65px)
-        left: 0
         width: 100%
         .inner
             display: flex
             align-items: center
     &__logo
-        max-width: rem(330px)
-        margin-right: 0
-        padding-right: rem(120px)
-        position: relative
-        float: none
+        width: rem(210px)
         margin-left: rem(-55px)
-        &:after
+        +r(1439)
+            width: rem(150px)
+            margin-left: 0
+        img
+            display: block
+            width: 100%
+    &__menu
+        position: relative
+        font-size: rem(20px)
+        flex-basis: 84%
+        font-weight: 700
+        padding-left: rem(120px)
+        +r(1439)
+            font-size: rem(12px)
+            padding-left: rem(40px)
+        &:before
             content: ""
             position: absolute
             width: rem(1px)
-            height: rem(121px)
             background-color: $white
-            top: 50%
-            transform: translateY(-50%)
-            right: rem(60px)
-    &__menu
-        width: 100%
-        max-width: rem(1325px)
-        font-size: rem(20px)
-        font-weight: 700
-    .active
+            top: 0
+            bottom: 0
+            left: rem(20px)
+    .is-active
         &:after
-            content: ""
-            position: absolute
-            width: 100%
-            height: rem(8px)
-            left: 0
-            bottom: rem(1px)
-            background-color: $teal
+            opacity: 1
+            visibility: visible
             z-index: -1
     &__list
         display: flex
         flex-direction: column
         align-items: flex-start
+        margin-bottom: 0
     &__item
         position: relative
         &:not(:last-child)
@@ -106,14 +117,22 @@
             text-decoration: none
         &:hover
             &:after
-                content: ""
-                position: absolute
-                width: 100%
-                height: rem(8px)
-                left: 0
-                bottom: rem(1px)
-                background-color: $teal
-                z-index: -1
+                opacity: 1
+                visibility: visible
+        &:after
+            content: ""
+            position: absolute
+            width: 100%
+            height: rem(8px)
+            left: 0
+            bottom: rem(1px)
+            background-color: $teal
+            z-index: -1
+            opacity: 0
+            visibility: hidden
+            transition: opacity .15s, visibility .15s
+            +r(1439)
+                height: rem(3px)
     &__social-title
         margin-bottom: rem(25px)
         text-align: left
