--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -7,7 +7,7 @@
         </div>
         <nav class="menu-main">
             <ul class="menu-main__list">
-                <li class="menu-main__item active"><a href="#">Talent</a></li>
+                <li class="menu-main__item is-active"><a href="#">Talent</a></li>
                 <li class="menu-main__item"><a href="#">Brands & Agencies</a></li>
                 <li class="menu-main__item"><a href="#">Pricing</a></li>
                 <li class="menu-main__item"><a href="#">Contacts</a></li>
@@ -23,5 +23,40 @@
                 </div>
             </div>
         </div>
+        
+        <button type="button" onclick="mnu()" class="toggle-mnu">
+            <span class="sandwich" id="sandwich">
+                <span class="sw-topper"></span>
+                <span class="sw-bottom"></span>
+                <span class="sw-footer"></span>
+            </span>
+        </button>
+        <div class="side-menu" id="side-menu">
+            <div class="side-menu__btn">
+                <button href="#" class="btn btn-outline-primary btn_xl btn_bold btn-color-white width173">Login</button>
+                <div class="signup">
+                    <button href="#" class="btn btn-primary btn_xl btn_bold width173">Sign up</button>
+                    <div class="login-type">
+                        <a href="#" class="login-type__item">Influencer</a>
+                        <a href="#" class="login-type__item">Brands</a>
+                    </div>
+                </div>
+            </div>
+            <ul class="side-menu__list">
+                <li class="side-menu__item"><a href="#">Talent</a></li>
+                <li class="side-menu__item"><a href="#">Brands & Agencies</a></li>
+                <li class="side-menu__item"><a href="#">Pricing</a></li>
+                <li class="side-menu__item"><a href="#">Contacts</a></li>
+            </ul>
+        </div>
     </div>
 </header>
+
+<script>
+function mnu() {
+    var sandwich = document.getElementById("sandwich");
+    var sideMenu = document.getElementById("side-menu");
+    sandwich.classList.toggle("is-active");
+    sideMenu.classList.toggle("is-active")
+};
+</script>
