--- a/src/templates/partials/home/_contacts.html
+++ b/src/templates/partials/home/_contacts.html
@@ -1,79 +1,83 @@
 <div class="contacts slide">
-    <div class="contacts__inner slide__inner inner">
-        <div class="contacts__content">
-            <div class="contacts__map">
-                <img src="./img/maps.png" alt="map">
-            </div>
-            <div class="contacts__form">
-                <h2 class="contacts__title">Contact</h2>
-                <form>
-                    <div class="form-group contacts__form-group">
-                        <input type="text" autocomplete="off" class="form-control contacts__input" placeholder="Full Name">
-                    </div>
-                    <div class="form-group contacts__form-group">
-                        <input type="email" autocomplete="off" class="form-control contacts__input" placeholder="Enter email">
-                    </div>
-                    <div class="form-group contacts__form-group">
-                      <textarea class="form-control  contacts__input" autocomplete="off" rows="3" placeholder="Message"></textarea>
-                    </div>
-                    <div class="contacts__submit">
-                        <button type="submit" class="btn btn-outline-primary btn_xl btn-color-white width197">SEND</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <div class="contacts__footer">
-        <div class="contacts__inner inner">
-            <div class="logo contacts__logo">
-                <a href="#">
-                    <img src="./img/logo (1)@2x.png" alt="img">
-                </a>
-            </div>
-            <div class="contacts__menu row">
-                <div class="col-md contacts__col">
-                    <ul class="contacts__list">
-                        <li class="contacts__item"><a href="#">Talent</a></li>
-                        <li class="contacts__item"><a href="#">Brands & Agencies</a></li>
-                        <li class="contacts__item"><a href="#">Pricing</a></li>
-                    </ul>
+    <div class="contacts__wrap">
+        <div class="contacts__inner slide__inner inner">
+            <div class="contacts__content">
+                <div class="contacts__map">
+                    <img src="./img/maps@2x.jpg" alt="map">
                 </div>
-                <div class="col-md contacts__col">
-                    <ul class="contacts__list">
-                        <li class="contacts__item"><a href="#">About Us</a></li>
-                        <li class="contacts__item active"><a href="#">Contacts</a></li>
-                    </ul>
-                </div>
-                <div class="col-md contacts__col">
-                    <ul class="contacts__list">
-                        <li class="contacts__item"><a href="#">Terms of Use</a></li>
-                        <li class="contacts__item"><a href="#">Help</a></li>
-                    </ul>
-                </div>
-                <div class="col-md contacts__col">
-                    <ul class="contacts__list">
-                        <li class="contacts__item"><a href="#">Impressum</a></li>
-                        <li class="contacts__item"><a href="#">Legal Info</a></li>
-                    </ul>
-                </div>
-                <div class="col-md contacts__col">
-                    <div class="contacts__social">
-                        <div class="contacts__social-title">
-                            Follow Me On
+                <div class="contacts__form">
+                    <h2 class="contacts__title">Contact</h2>
+                    <form>
+                        <div class="form-group contacts__form-group">
+                            <input type="text" autocomplete="off" class="form-control contacts__input" placeholder="Full Name">
                         </div>
-                        <div class="social">
-                            <a href="#" class="social__item">{{ mixins.icon("youtube") }}</a>
-                            <a href="#" class="social__item">{{ mixins.icon("facebook") }}</a>
-                            <a href="#" class="social__item">{{ mixins.icon("twitter") }}</a>
+                        <div class="form-group contacts__form-group">
+                            <input type="email" autocomplete="off" class="form-control contacts__input" placeholder="Enter email">
                         </div>
-                    </div>
+                        <div class="form-group contacts__form-group">
+                        <textarea class="form-control  contacts__input" autocomplete="off" rows="3" placeholder="Message"></textarea>
+                        </div>
+                        <div class="contacts__submit">
+                            <button type="submit" class="btn btn-outline-primary btn_xl btn-color-white width197">SEND</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="slide__footer">
-        {# Start contacts #}
-        {% include "partials/_footer.html" %}
-        {# END contacts #}
+        <div class="slide__footer">
+            <div class="contacts__footer">
+                <div class="contacts__inner inner">
+                    <div class="contacts__logo">
+                        <a href="#">
+                            <img src="./img/logo (1)@2x.png" alt="img">
+                        </a>
+                    </div>
+                    <div class="contacts__menu ">
+                        <div class="row">
+                            <div class="col-md contacts__col">
+                                <ul class="contacts__list">
+                                    <li class="contacts__item"><a href="#">Talent</a></li>
+                                    <li class="contacts__item"><a href="#">Brands & Agencies</a></li>
+                                    <li class="contacts__item"><a href="#">Pricing</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-md contacts__col">
+                                <ul class="contacts__list">
+                                    <li class="contacts__item"><a href="#">About Us</a></li>
+                                    <li class="contacts__item is-active"><a href="#">Contacts</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-md contacts__col">
+                                <ul class="contacts__list">
+                                    <li class="contacts__item"><a href="#">Terms of Use</a></li>
+                                    <li class="contacts__item"><a href="#">Help</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-md contacts__col">
+                                <ul class="contacts__list">
+                                    <li class="contacts__item"><a href="#">Impressum</a></li>
+                                    <li class="contacts__item"><a href="#">Legal Info</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-md contacts__col">
+                                <div class="contacts__social">
+                                    <div class="contacts__social-title">
+                                        Follow Me On
+                                    </div>
+                                    <div class="social">
+                                        <a href="#" class="social__item">{{ mixins.icon("youtube") }}</a>
+                                        <a href="#" class="social__item">{{ mixins.icon("facebook") }}</a>
+                                        <a href="#" class="social__item">{{ mixins.icon("twitter") }}</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {# Start contacts #}
+            {% include "partials/_footer.html" %}
+            {# END contacts #}
+        </div>
     </div>
 </div>
