--- a/src/templates/partials/home/_benefits.html
+++ b/src/templates/partials/home/_benefits.html
@@ -3,7 +3,7 @@
             <div class="benefits__content">
                 <div class="benefits__text slide__text">
                     <div class="benefits__btns slide__btns">
-                        <a href="#" class="btn btn-primary btn_xs width192 mr-5">eSports Talent</a>
+                        <a href="#" class="btn btn-primary btn_xs width192">eSports Talent</a>
                         <a href="#" class="btn btn-outline-primary btn_xs btn-color-white width192">Brands & Agencies</a>
                     </div>
                     <div class="benefits__wrap">
