--- a/src/templates/partials/home/_contacts.html
+++ b/src/templates/partials/home/_contacts.html
@@ -34,32 +34,32 @@
                     </div>
                     <div class="contacts__menu ">
                         <div class="row">
-                            <div class="col-md contacts__col">
+                            <div class="col-12 col-md contacts__col col-sm-4">
                                 <ul class="contacts__list">
                                     <li class="contacts__item"><a href="#">Talent</a></li>
                                     <li class="contacts__item"><a href="#">Brands & Agencies</a></li>
                                     <li class="contacts__item"><a href="#">Pricing</a></li>
                                 </ul>
                             </div>
-                            <div class="col-md contacts__col">
+                            <div class="col-12 col-md contacts__col col-sm-4">
                                 <ul class="contacts__list">
                                     <li class="contacts__item"><a href="#">About Us</a></li>
                                     <li class="contacts__item is-active"><a href="#">Contacts</a></li>
                                 </ul>
                             </div>
-                            <div class="col-md contacts__col">
+                            <div class="col-12 col-md contacts__col col-sm-4">
                                 <ul class="contacts__list">
                                     <li class="contacts__item"><a href="#">Terms of Use</a></li>
                                     <li class="contacts__item"><a href="#">Help</a></li>
                                 </ul>
                             </div>
-                            <div class="col-md contacts__col">
+                            <div class="col-12 col-md contacts__col col-sm-4">
                                 <ul class="contacts__list">
                                     <li class="contacts__item"><a href="#">Impressum</a></li>
                                     <li class="contacts__item"><a href="#">Legal Info</a></li>
                                 </ul>
                             </div>
-                            <div class="col-md contacts__col">
+                            <div class="col-12 col-md contacts__col col-sm-4">
                                 <div class="contacts__social">
                                     <div class="contacts__social-title">
                                         Follow Me On
