--- a/src/templates/partials/home/_friends.html
+++ b/src/templates/partials/home/_friends.html
@@ -20,7 +20,7 @@
                     {logo: "Blizzard_Entertainment_Logo.svg"}
                 ] %}
 
-                <li class="friends__item col-md-4">
+                <li class="friends__item col-md-4 col-sm-4 col-6">
                     <div class="logos-wrap">
                         <img src="./img/svgo/{{item.logo}}" alt="logo">
                     </div>
