--- a/src/templates/partials/home/_marketplace.html
+++ b/src/templates/partials/home/_marketplace.html
@@ -10,7 +10,7 @@
                     We are empowering eSports athletes and personalities to get stuff from brands and sponsors for being you to those who like you!
                 </p>
                 <div class="marketplace__btns slide__btns">
-                    <a href="#" class="btn btn-primary btn-lg btn_xl width212 mr-5">INFLUENCERS</a>
+                    <a href="#" class="btn btn-primary btn-lg btn_xl width212">INFLUENCERS</a>
                     <a href="#" class="btn btn-outline-primary btn-lg btn_xl btn-color-white width212">BRANDS</a>
                 </div>
             </div>
