--- a/src/sass/components/home/_benefits.sass
+++ b/src/sass/components/home/_benefits.sass
@@ -6,6 +6,10 @@
         display: flex
         align-items: center
         justify-content: space-between
+        +md
+            flex-direction: column
+            align-items: flex-start
+            justify-content: flex-start
     &__text
         max-width: rem(640px)
         font-size: rem(20px)
@@ -14,11 +18,29 @@
         +r(1439)
             font-size: rem(16px)
             margin-right: rem(30px)
+        +md
+            margin-bottom: rem(30px)
+            margin-right: 0
+            max-width: none
+        +sm
+            padding-left: 0
+            font-size: rem(14px)
     &__btns
         display: flex
+        align-items: flex-start
         margin-bottom: rem(70px)
         +r(1439)
             margin-bottom: rem(45px)
+        +md
+            flex-wrap: wrap
+        +sm
+            margin-bottom: rem(25px)
+        .btn-primary
+            margin-right: rem(95px)
+            +md
+                margin-right: rem(40px)
+            +sm
+                margin-bottom: rem(25px)
     &__wrap
         margin-bottom: rem(15px)
     &__title
@@ -36,6 +58,8 @@
         font-weight: 700
         +r(1439)
             font-size: rem(14px)
+        +sm
+            line-height: 1.5
         &:not(:last-child)
             margin-bottom: 0
         .icon
@@ -45,10 +69,14 @@
             top: rem(14px)
             +r(1439)
                 top: rem(9px)
+            +sm
+                top: rem(3px)
     &__slider
         padding-right: rem(88px)
         +r(1439)
             padding-right: rem(44px)
+        +md
+            padding-right: 0
 
 .benefits-slider
     position: relative
@@ -82,3 +110,6 @@
             min-height: rem(400px)
             width: auto
             max-width: 100%
+            +r(1439)
+                max-height: calc(100vh - 233px)
+                min-height: rem(300px)
