--- a/src/sass/components/home/_interest.sass
+++ b/src/sass/components/home/_interest.sass
@@ -4,8 +4,9 @@
         display: flex
         align-items: center
         +r(1439)
-            // flex-direction: column
-            // padding-right: rem(50px)
+        +sm
+            flex-direction: column
+            align-items: flex-start
     &__text
         font-size: rem(24px)
         font-family: $font-family-montserrat
@@ -16,6 +17,10 @@
         +r(1439)
             font-size: rem(18px)
             margin-right: rem(20px)
+        +sm
+            padding-left: 0
+            margin-right: 0
+            font-size: rem(14px)
             // max-width: none
             // display: flex
             // justify-content: space-between
@@ -25,8 +30,13 @@
         margin-bottom: rem(50px)
         +r(1439)
             max-width: rem(500px)
+        +sm
+            max-width: none
+            margin-bottom: rem(25px)
         p
             max-width: rem(660px)
+            +sm
+                max-width: none
     &__title
         font-size: rem(30px)
         font-weight: 700
@@ -34,14 +44,21 @@
         margin-bottom: rem(25px)
         +r(1439)
             font-size: rem(24px)
+        +sm
+            font-size: rem(18px)
+            margin-bottom: rem(15px)
         &_lg
             font-size: rem(34px)
             +r(1439)
                 font-size: rem(28px)
+            +sm
+                font-size: rem(20px)
     &__img
         flex-basis: 50%
         +r(1439)
             padding-right: rem(50px)
+        +sm
+            padding-right: 0
         img
             max-width: 570px
             +r(1439)
