--- a/src/sass/components/home/_main-slider.sass
+++ b/src/sass/components/home/_main-slider.sass
@@ -17,6 +17,8 @@
     border-radius: 50%
     transition: $custom-forms-transition
     box-sizing: initial
+    +md
+        display: none
     &:not(:last-child)
         margin-bottom: rem(30px)
     &.active
