--- a/src/sass/components/home/_slide.sass
+++ b/src/sass/components/home/_slide.sass
@@ -3,6 +3,9 @@
     height: 100vh
     overflow: auto
     +vertical
+    +md
+        height: auto
+        padding: rem(15px 0)
     &__text
         position: relative
         z-index: 1
@@ -12,6 +15,8 @@
         vertical-align: middle
         text-align: left
         font-size: 1rem
+        +sm
+            padding-top: rem(60px)
     &__img
         img
             display: block
@@ -19,6 +24,11 @@
             min-height: rem(400px)
             width: auto
             max-width: 100%
+            +r(1439)
+                max-height: calc(100vh - 233px)
+                min-height: rem(300px)
+            +sm
+                min-height: rem(100px)
     &__footer
         position: absolute
         bottom: 0
@@ -31,12 +41,22 @@
         display: flex
         align-items: center
         justify-content: space-between
+        +md
+            flex-direction: column
+            justify-content: flex-start
+            align-items: flex-start
     &__text
         max-width: rem(705px)
         font-size: rem(20px)
         +r(1439)
             font-size: rem(16px)
             max-width: rem(550px)
+        +md
+            margin-bottom: rem(30px)
+            width: 100%
+            max-width: none
+        +sm
+            font-size: rem(14px)
     &__title
         font-size: rem(55px)
         font-weight: 700
@@ -44,14 +64,29 @@
         margin-bottom: rem(30px)
         +r(1439)
             font-size: rem(40px)
+        +sm
+            font-size: rem(30px)
         span
             color: $primary
     &__btns
         margin-top: rem(42px)
+        +md
+            display: flex
+            flex-direction: column
+            align-items: center
+        .btn-primary
+            margin-right: rem(60px)
+            +md
+                margin-right: 0
+                margin-bottom: rem(25px)
+
     &__img
         margin-left: rem(-460px)
         padding-right: rem(60px)
         +r(1439)
+            padding-right: 0
+        +md
+            margin-left: 0
             padding-right: 0
 
 
