--- a/src/sass/components/home/_why-join.sass
+++ b/src/sass/components/home/_why-join.sass
@@ -2,9 +2,13 @@
     background-repeat: no-repeat
     background-position: 0 0
     background-size: contain
+    +sm
+        background-size: cover
     &__inner
     &__content
         padding-left: rem(50px)
+        +sm
+            padding-left: 0
     &__title
         font-size: rem(74px)
         font-weight: 700
@@ -13,12 +17,18 @@
         padding-left: rem(104px)
         +r(1439)
             font-size: rem(50px)
+        +sm
+            font-size: rem(30px)
+            padding-left: 0
     &__text
         padding-left: rem(159px)
         font-family: $font-family-montserrat
         margin-bottom: rem(115px)
         +r(1439)
             margin-bottom: rem(50px)
+        +sm
+            padding-left: rem(50px)
+            margin-bottom: rem(30px)
     &__advantages
         position: relative
         font-size: rem(28px)
@@ -26,6 +36,9 @@
         font-weight: 600
         +r(1439)
             font-size: rem(20px)
+        +sm
+            font-size: rem(14px)
+            margin-bottom: rem(25px)
         &:before
             content: ""
             position: absolute
@@ -33,8 +46,11 @@
             height: rem(2px)
             background-color: $primary
             left: rem(-159px)
-            top: 50%
-            transform: translateY(-50%)
+            top: rem(8px)
+            +sm
+                width: rem(30px)
+                left: rem(-50px)
+                top: rem(5px)
     &__list
     &__item
         .icon
@@ -43,4 +59,6 @@
         opacity: 0.7
         font-weight: 700
         font-size: 26px
+        +sm
+            font-size: rem(18px)
 
