--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -1,20 +1,22 @@
 body
-	position: relative
+    position: relative
 
 
 .btn-color-white
     color: $white
 .btn
-	&_bold
-		font-weight: 700
-	&_xxl
-		font-size: rem(21px)
-	&_xl
-		font-size: rem(20px)
-	&_m
-		font-size: rem(18px)
-	&_xs
-		font-size: rem(14px)
+    &_upper
+        text-transform: uppercase
+    &_bold
+        font-weight: 700
+    &_xxl
+        font-size: rem(21px)
+    &_xl
+        font-size: rem(20px)
+    &_m
+        font-size: rem(18px)
+    &_xs
+        font-size: rem(14px)
 .btn_xl
     +r(1439)
         font-size: rem(16px)
@@ -23,15 +25,19 @@ body
     width: rem(173px)
     +r(1439)
         width: rem(120px)
-.width212
-		width: rem(212px)
 .width192
-		width: rem(192px)
+        width: rem(192px)
 .width197
     width: rem(197px)
+.width212
+        width: rem(212px)
+.width270
+    width: rem(270px)
+.width309
+    width: rem(309px)
 
 .branded-list
-	&__item
+    &__item
         position: relative
         padding-left: rem(36px)
         font-weight: 300
@@ -88,3 +94,20 @@ body
         .icon
             color: $gray-900
 
+
+.input-dark
+    background-color: transparent
+    border: none
+    border-bottom: 1px solid $white
+    border-radius: 0
+    resize: none
+    color: $white
+    font-size: rem(18px)
+    padding: rem(13px 0)
+    +placeholder
+        color: $white
+    &:focus
+        background-color: transparent
+        color: $white
+        &::placeholder
+            font-size: 0
